tests/snapshots/trace_cli@16736406663811832092.snap
---
source: tests/trace_cli.rs
info: set mistyped val
---
Error: unknown option `mistyped`

Options are:
- match_constructor_through_ref: false | true
    Whether `[p]` can match on `&[T]`; the heart of match ergonomics.
- eat_inherited_ref_alone: false | true
    Whether `&p`/`&mut p` is allowed on an inherited reference if the underlying type isn't also a reference type
- inherited_ref_on_ref: EatOuter | EatInner | EatBoth | Error
    How to handle a reference pattern on a double reference when the outer one is inherited
- fallback_to_outer: false | true
    Whether to try again in `EatOuter` mode when a `EatBoth` or `EatInner` case has a mutability mismatch
- eat_mut_inside_shared: false | true
    In `EatInner` or `EatBoth`, `&mut p` can eat an inner `&mut T` from under a `&`
- allow_ref_pat_on_ref_mut: false | true
    Whether to allow a shared ref pattern on a mutable ref type
- downgrade_mut_inside_shared: false | true
    RFC3627 rule 3: downgrade `&mut` inherited references to `&` inside a shared deref
- ref_binding_on_inherited: Error | ResetBindingMode | AllocTemporary
    How to handle a `ref x` binding on an inherited reference
- mut_binding_on_inherited: Error | ResetBindingMode | Keep
    How to handle a `mut x` binding on an inherited reference
- simplify_deref_mut: false | true
    Whether to simplify `*&mut expr`, which removes some borrow errors
- predicate_style: Expression | Sequent | BindingMode | SequentBindingMode | Stateless
    the style of the typing predicate; not all rulesets can be expressed in all styles, only `Expression` is compatible with all rulesets

There also exist some predefined option-bundles. Activate one with `set <bundle>`
- nadri: A reasonable proposal; like `stateless` but forbids `ref` bindings that create temporaries
- stateless: A proposal that tracks no hidden state; purely type-based
- stable_rust: The behavior of current stable rust
- rfc3627: The accepted RFC3627 behavior
- rfc3627_2021: The accepted RFC3627 behavior under edition 2021
- rfc3627_2024_min: The breaking changes for edition 2024 planned in RFC3627
- structural: Purely structural matching, with no match ergonomics
- waffle: A proposal by @WaffleLapkin (excluding the proposed rule3 extension)
