tests/snapshots/trace_cli@16802997052617302686.snap
---
source: tests/trace_cli.rs
info: options
---
match_constructor_through_ref: true
eat_inherited_ref_alone: true
inherited_ref_on_ref: EatOuter
fallback_to_outer: false
allow_ref_pat_on_ref_mut: true
simplify_deref_mut: true
downgrade_mut_inside_shared: false
ref_binding_on_inherited: Error
mut_binding_on_inherited: Keep
rules_display_style: Expression
