tests/snapshots/trace_cli@17515479014605656910.snap
---
source: tests/trace_cli.rs
info: set
---
Error: Syntax is `set option value`.

Options are:
- match_constructor_through_ref: false | true
    Whether `[p]` can match on `&[T]`; the heart of match ergonomics.
- eat_inherited_ref_alone: false | true
    Whether `&p`/`&mut p` is allowed on an inherited reference if the underlying type isn't also a reference type
- inherited_ref_on_ref: EatOuter | EatInner | EatBoth | Error
    How to handle a reference pattern on a double reference when the outer one is inherited
- fallback_to_outer: No | EatOuter | EatBoth
    Whether to try again in `EatOuter` mode when a `EatBoth` or `EatInner` case has a mutability mismatch
- eat_mut_inside_shared: false | true
    In `EatInner` or `EatBoth`, `&mut p` can eat an inner `&mut T` from under a `&`
- allow_ref_pat_on_ref_mut: false | true
    Whether to allow a shared ref pattern on a mutable ref type
- downgrade_mut_inside_shared: false | true
    RFC3627 rule 3: downgrade `&mut` inherited references to `&` inside a shared deref
- ref_binding_on_inherited: Error | ResetBindingMode | AllocTemporary
    How to handle a `ref x` binding on an inherited reference
- mut_binding_on_inherited: Error | ResetBindingMode | Keep
    How to handle a `mut x` binding on an inherited reference
- simplify_deref_mut: false | true
    Whether to simplify `*&mut expr`, which removes some borrow errors
- predicate_style: Let | SequentUserVisible | SequentInMemory
    the style of the typing predicate; not all rulesets can be expressed in all styles, only `Let` is compatible with all rulesets

There also exist some predefined option-bundles. Activate one with `set <bundle>`
- stable_rust: The behavior of current stable rust
- stateless: A proposal that tracks no hidden state; purely type-based
- nadri: A reasonable proposal; like `stateless` but forbids `ref` bindings that create temporaries
- stateless_2021: The currently-planned version of the `stateless` ruleset for edition 2021. Not actually stateless.
- eat_outer_2021: A backwards-compatible proposal by @dianne that behaves close to the 2024 stateless proposal.
- rfc3627: The accepted RFC3627 behavior
- rfc3627_2021: The accepted RFC3627 behavior under edition 2021
- rfc3627_2024_min: The breaking changes for edition 2024 planned in RFC3627
- structural: Purely structural matching, with no match ergonomics
- min_ergonomics: The minimal amout of match ergonomics that's forward-compatible with most proposals
- waffle: A proposal by @WaffleLapkin (excluding the proposed rule3 extension)
