tests/snapshots/trace_cli@5900792514749710836.snap
---
source: tests/trace_cli.rs
info: "&ap: &T"
---
real, rw ⊢ &ap: &T
// Applying rule `Deref`
real, ro ⊢ ap: T
// Type error for `real, ro ⊢ ap: T`: OverlyGeneral(Pattern)
