tests/snapshots/trace_cli@6722020181128628927.snap
---
source: tests/trace_cli.rs
info: set predicate_style Stateless
---
Error: the current ruleset cannot be displayed with style Stateless.
