tests/snapshots/trace_cli@7692167041862805615.snap
---
source: tests/trace_cli.rs
info: "set structural\nset rules_display_style BindingMode\nrules"
---
allow_ref_pat_on_ref_mut: true -> false
match_constructor_through_ref: true -> false
ref_binding_on_inherited: "Error" -> "AllocTemporary"
simplify_deref_mut: true -> false

The two rulesets are described by the following sets of rules, with differences highlighted.

 p0 @ e.0: T0,  p1 @ e.1: T1                                                      | p0 @ e.0: T0,  p1 @ e.1: T1
 --------------------------- "Constructor"                                        | --------------------------- "Constructor"
 [p0, p1] @ e: [T0, T1]                                                           | [p0, p1] @ e: [T0, T1]

 p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1                                            |  
 ------------------------------------- "ConstructorRef"                           |  
 [p0, p1] @ e: &[T0, T1]                                                          |  

 p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1                            |  
 ----------------------------------------------------- "ConstructorRef"           |  
 [p0, p1] @ e: &mut [T0, T1]                                                      |  

 [p0, p1] @ *e: &T                                                                |  
 ----------------- "ConstructorMultiRef"                                          |  
 [p0, p1] @ e: &&T                                                                |  

 [p0, p1] @ &**e: &T                                                              |  
 --------------------- "ConstructorMultiRef"                                      |  
 [p0, p1] @ e: &&mut T                                                            |  

 [p0, p1] @ *e: &T                                                                |  
 --------------------- "ConstructorMultiRef"                                      |  
 [p0, p1] @ e: &mut &T                                                            |  

 [p0, p1] @ &mut **e: &mut T                                                      |  
 --------------------------- "ConstructorMultiRef"                                |  
 [p0, p1] @ e: &mut &mut T                                                        |  

 p @ *e: T                                                                        | p @ *e: T
 ---------- "Deref(EatOuter)"                                                     | ---------- "Deref(EatOuter)"
 &p @ e: &T                                                                       | &p @ e: &T

 p @ *e: T                                                                        | p @ *e: T
 ------------------ "Deref(EatOuter)"                                             | ------------------ "Deref(EatOuter)"
 &mut p @ e: &mut T                                                               | &mut p @ e: &mut T

 p @ *&*e: T                                                                      |  
 -------------- "DerefMutWithShared(EatOuter)"                                    |  
 &p @ e: &mut T                                                                   |  

 x @ &e: &T                                                                       | x @ &e: &T
 ---------------------------------- "BindingBorrow"                               | ---------------------------------- "BindingBorrow"
 ref x @ e: T, e is not a reference                                               | ref x @ e: T, e is not a reference

                                                                                  | x @ &&e: &&T
                                                                                  | -------------- "BindingBorrow"
                                                                                  | ref x @ &e: &T

                                                                                  | x @ &&mut e: &&mut T
                                                                                  | ---------------------- "BindingBorrow"
                                                                                  | ref x @ &mut e: &mut T

 x @ &mut e: &mut T                                                               | x @ &mut e: &mut T
 -------------------------------------- "BindingBorrow"                           | -------------------------------------- "BindingBorrow"
 ref mut x @ e: T, e is not a reference                                           | ref mut x @ e: T, e is not a reference

                                                                                  | x @ &mut &e: &mut &T
                                                                                  | -------------------- "BindingBorrow"
                                                                                  | ref mut x @ &e: &T

                                                                                  | x @ &mut &mut e: &mut &mut T
                                                                                  | ---------------------------- "BindingBorrow"
                                                                                  | ref mut x @ &mut e: &mut T

 let x: T = e                                                                     | let x: T = e
 ------------ "Binding"                                                           | ------------ "Binding"
 x @ e: T                                                                         | x @ e: T

 let mut x: T = e                                                                 | let mut x: T = e
 ---------------- "Binding"                                                       | ---------------- "Binding"
 mut x @ e: T                                                                     | mut x @ e: T

rules_display_style: "Expression" -> "BindingMode"

The two rulesets are described by the following sets of rules, with differences highlighted.

 p0 @ e.0: T0,  p1 @ e.1: T1                                                      | p0 @ e.0: T0,  p1 @ e.1: T1
 --------------------------- "Constructor"                                        | --------------------------- "Constructor"
 [p0, p1] @ e: [T0, T1]                                                           | [p0, p1] @ e: [T0, T1]

 p @ *e: T                                                                        | p @ *e: T
 ---------- "Deref(EatOuter)"                                                     | ---------- "Deref(EatOuter)"
 &p @ e: &T                                                                       | &p @ e: &T

 p @ *e: T                                                                        | p @ *e: T
 ------------------ "Deref(EatOuter)"                                             | ------------------ "Deref(EatOuter)"
 &mut p @ e: &mut T                                                               | &mut p @ e: &mut T

 x @ &e: &T                                                                       | x @ &e: &T
 ------------ "BindingBorrow"                                                     | ------------ "BindingBorrow"
 ref x @ e: T                                                                     | ref x @ e: T

 x @ &mut e: &mut T                                                               | x @ &mut e: &mut T
 ------------------ "BindingBorrow"                                               | ------------------ "BindingBorrow"
 ref mut x @ e: T                                                                 | ref mut x @ e: T

 let x: T = e                                                                     | let x: T = e
 ------------ "Binding"                                                           | ------------ "Binding"
 x @ e: T                                                                         | x @ e: T

 let mut x: T = e                                                                 | let mut x: T = e
 ---------------- "Binding"                                                       | ---------------- "Binding"
 mut x @ e: T                                                                     | mut x @ e: T

The current options can be fully described as the following set of rules.

p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p @ *e: T
---------- "Deref(EatOuter)"
&p @ e: &T

p @ *e: T
------------------ "Deref(EatOuter)"
&mut p @ e: &mut T

x @ &e: &T
------------ "BindingBorrow"
ref x @ e: T

x @ &mut e: &mut T
------------------ "BindingBorrow"
ref mut x @ e: T

let x: T = e
------------ "Binding"
x @ e: T

let mut x: T = e
---------------- "Binding"
mut x @ e: T
